--- a/Credit_Card_Fraud_Detection_assignment.ipynb
+++ b/Credit_Card_Fraud_Detection_assignment.ipynb
@@ -964,12 +964,153 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "NxnFda-JkFfH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0IDKN_a0g6Jj",
+        "outputId": "83b3f274-cbd5-42e6-d248-307b02a628fb"
       },
       "source": [
-        "As We Can See That We Have Highly Unbalanced Dataset We'll Have To Balance It."
+        "len(df)"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "284807"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9RfRDFtZhUV8"
+      },
+      "source": [
+        "There are total 284807 number of transactions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Fh_MWithc6K",
+        "outputId": "1d514c15-5d80-41de-fd0d-5dd75effdb6d"
+      },
+      "source": [
+        "len(Frauds)"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "492"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J9xnV2V6iWgN"
+      },
+      "source": [
+        "Out of 284807 transactions 492 are the fraud transactions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6A1Myx-liYLZ",
+        "outputId": "b028f836-025f-44b7-d428-4f80c8ccadbf"
+      },
+      "source": [
+        "valid = len(df) - len(Frauds)\n",
+        "valid"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "284315"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bNjRC8ugiz30"
+      },
+      "source": [
+        "Out of 284807 transactions 284315 are the valid transactions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5lgYeuh3i4pt",
+        "outputId": "04d3217a-6209-4f65-b86d-c35f01ce23ea"
+      },
+      "source": [
+        "perc_fraud = len(Frauds) / len(df) * 100\n",
+        "perc_fraud"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.1727485630620034"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pcPJ5MsMjXhl"
+      },
+      "source": [
+        "As you can see out of total transactions only 0.17 % are the fraud transactions.It means that we have highly imbalance dataset in our hand. There is a large margin between the valid transactions and fraud transactions."
       ]
     },
     {
@@ -982,7 +1123,7 @@
         "outputId": "4c23c116-711b-4f58-95ea-452ff4f29140"
       },
       "source": [
-        "# Checking Important Stats of Fraud Transactions\n",
+        "# Checking Important Stats of Amount used in Fraud Transactions\n",
         "Frauds.Amount.describe()"
       ],
       "execution_count": 66,
@@ -1019,7 +1160,7 @@
         "outputId": "12a0d50d-b13e-46e4-d838-cff070094779"
       },
       "source": [
-        "# Checking Imprtant Stats of Valid Transactions\n",
+        "# Checking Imprtant Stats of Amount used in Valid Transactions\n",
         "Valid.Amount.describe()"
       ],
       "execution_count": 67,
