--- a/Credit_Card_Fraud_Detection_assignment.ipynb
+++ b/Credit_Card_Fraud_Detection_assignment.ipynb
@@ -3083,10 +3083,64 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Oa0iZJgg0Zmz"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 365
+        },
+        "id": "wdq9qt5KPBcg",
+        "outputId": "0b9a1955-27d2-4dbc-c494-c8ee3ac7bf14"
       },
       "source": [
-        "encoder = models.Sequential(name = 'encoder')\n",
+        "# model\n",
+        "from tensorflow.keras.models import  Sequential\n",
+        "encoder = Sequential(name='encoder')\n",
+        "encoder.add(Dense(units=20, activation='relu', input_shape=(train_data.shape[-1],)))\n",
+        "encoder.add(Dropout(0.1))\n",
+        "encoder.add(Dense(units=10, activation='relu'))\n",
+        "encoder.add(Dense(units=5, activation='relu'))\n",
+        "\n",
+        "decoder = Sequential(name='decoder')\n",
+        "decoder.add(Dense(units=10, activation='relu', input_shape=[5]))\n",
+        "decoder.add(Dense(units=20, activation='relu'))\n",
+        "decoder.add(Dropout(0.1))\n",
+        "decoder.add(Dense(units=(train_data.shape[-1],), activation='sigmoid'))\n",
+        "\n",
+        "autoencoder = models.Sequential([encoder, decoder])\n",
+        "\n",
+        "autoencoder.compile(\n",
+        "\tloss=losses.MSE,\n",
+        "\toptimizer=optimizers.Adam(),\n",
+        "\tmetrics=[metrics.mean_squared_error])"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-65-823167a51588>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mdecoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mdecoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mdecoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munits\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sigmoid'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mautoencoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mencoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdecoder\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/keras/layers/core.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, units, activation, use_bias, kernel_initializer, bias_initializer, kernel_regularizer, bias_regularizer, activity_regularizer, kernel_constraint, bias_constraint, **kwargs)\u001b[0m\n\u001b[1;32m   1158\u001b[0m         activity_regularizer=activity_regularizer, **kwargs)\n\u001b[1;32m   1159\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1160\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munits\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0munits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1161\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactivation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mactivations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactivation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1162\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse_bias\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0muse_bias\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'tuple'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "id": "Oa0iZJgg0Zmz",
+        "outputId": "5775cea0-6ace-42b8-b615-f4f15c99897a"
+      },
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "encoder = Sequential(name = 'encoder')\n",
         "encoder.add(Dense(10, activation='relu', input_shape = (train_data.shape[-1],)))\n",
         "encoder.add(Dropout(0.1))\n",
         "encoder.add(Dense(8, activation = 'relu'))\n",
@@ -3096,11 +3150,24 @@
         "decoder = models.Sequential(name = 'decoder') \n",
         "decoder.add(Dense(10, activation='relu', input_shape(train_data.shape[-1],)))\n",
         "decoder.add(Dense(20, activation = 'relu'))\n",
+        "decoder.add(Dropout(0.1))\n",
+        "decoder.add(Dense(units = len(train_data.columns), activation='sigmoid')\n",
         "\n",
-        "\n"
+        "autoencoder = Sequential([encoder, decoder])\n",
+        "autoencoder.compile(loss = 'mse', optimizer = 'adam', metrics = [metrics.mean_squared_error])\n",
+        "autoencoder.summary()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-64-285d883e2111>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    autoencoder = Sequential([encoder, decoder])\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
